tweaked small video layout bug

--- a/embeds/leicester-city-video-1/style.scss
+++ b/embeds/leicester-city-video-1/style.scss
@@ -52,7 +52,7 @@ $c-white: #ffffff;
 
     @include mq(desktop) {
         height:300px;
-        background-position-x: -32%;
+        //background-position-x: -32%;
     }
 }
 
@@ -214,8 +214,8 @@ $c-white: #ffffff;
     display:none;
 
     @include mq(desktop){
-        width:1100px;
-        margin-top:-115px;
+        width: 1100px;
+        margin: -115px -200px 0;
         display:block;
     }
 }
